@@ -1,6 +1,8 @@
 ViTables ChangeLog
 ==================
 ** December 05, 2009 **
+The documentation browser subpackage has been simplified.
+
 Several question like message boxes have been customised.
 
 ** December 04, 2009 **
